Minor changes in Notebook and Dynamic Currency Hedging

--- a/Dynamic Currency Hedging.ipynb
+++ b/Dynamic Currency Hedging.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -99,12 +99,12 @@
     "\n",
     "df_r_diff.plot()\n",
     "plt.title('Interest rate differentials (foreign rate minus CHF rate)')\n",
-    "plt.savefig('Plots/InterestRateDifferentials.jpg')"
+    "plt.savefig('Plots/InterestRateDifferentials.jpg', dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -380,6 +380,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>intercept</th>\n",
+       "      <td>-0.025896</td>\n",
+       "      <td>-0.026014</td>\n",
+       "      <td>-0.025845</td>\n",
+       "      <td>-0.027003</td>\n",
+       "      <td>-0.029621</td>\n",
+       "      <td>-0.029773</td>\n",
+       "      <td>-0.027854</td>\n",
+       "      <td>-0.024565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>p-value intercept</th>\n",
+       "      <td>0.046883</td>\n",
+       "      <td>0.003712</td>\n",
+       "      <td>0.000334</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>slope</th>\n",
        "      <td>1.434214</td>\n",
        "      <td>1.434676</td>\n",
@@ -389,6 +411,17 @@
        "      <td>1.387665</td>\n",
        "      <td>1.244484</td>\n",
        "      <td>1.029553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>p-value slope</th>\n",
+       "      <td>0.015054</td>\n",
+       "      <td>0.000535</td>\n",
+       "      <td>0.000049</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RSquared</th>\n",
@@ -406,16 +439,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                1         2         3         6         12        18  \\\n",
-       "slope     1.434214  1.434676  1.386582  1.367418  1.441740  1.387665   \n",
-       "RSquared  0.004437  0.009856  0.013919  0.028691  0.068371  0.107640   \n",
+       "                         1         2         3         6         12        18  \\\n",
+       "intercept         -0.025896 -0.026014 -0.025845 -0.027003 -0.029621 -0.029773   \n",
+       "p-value intercept  0.046883  0.003712  0.000334  0.000000  0.000000  0.000000   \n",
+       "slope              1.434214  1.434676  1.386582  1.367418  1.441740  1.387665   \n",
+       "p-value slope      0.015054  0.000535  0.000049  0.000000  0.000000  0.000000   \n",
+       "RSquared           0.004437  0.009856  0.013919  0.028691  0.068371  0.107640   \n",
        "\n",
-       "                24        36  \n",
-       "slope     1.244484  1.029553  \n",
-       "RSquared  0.125222  0.137465  "
+       "                         24        36  \n",
+       "intercept         -0.027854 -0.024565  \n",
+       "p-value intercept  0.000000  0.000000  \n",
+       "slope              1.244484  1.029553  \n",
+       "p-value slope      0.000000  0.000000  \n",
+       "RSquared           0.125222  0.137465  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +490,7 @@
     "forecast_durations = [1,2,3,6,12,18,24,36]\n",
     "\n",
     "# To store result\n",
-    "fx_forecast = pd.DataFrame(columns=['slope', 'RSquared'], index=forecast_durations)\n",
+    "fx_forecast = pd.DataFrame(columns=['intercept', 'p-value intercept', 'slope','p-value slope', 'RSquared'], index=forecast_durations)\n",
     "\n",
     "# Create forecasts for every duration\n",
     "for n in forecast_durations:\n",
@@ -479,27 +518,27 @@
     "    df_future_fx_ret = 12 * df_future_fx_ret / n\n",
     "\n",
     "    # First individual currencies\n",
-    "    # for c in df_future_fx_ret.columns:\n",
-    "\n",
-    "        # x = df_r_diff[c]\n",
-    "        # y = df_future_fx_ret[c]\n",
-    "        # df = pd.DataFrame({'x':pd.to_numeric(x), 'y':pd.to_numeric(y)})\n",
-    "        # df = df[df!=0].dropna()\n",
-    "        # mod = ols('y ~ x', data=df).fit()\n",
-    "        # if mod.rsquared > 0.05:\n",
-    "            # print(n)\n",
-    "            # print(c)\n",
-    "            # plt.scatter(df_r_diff[c], df_future_fx_ret[c])\n",
-    "            # plt.show()\n",
-    "            # print(mod.params)\n",
-    "            # print(mod.rsquared)\n",
+    "#     for c in df_future_fx_ret.columns:\n",
+    "#         print(c)\n",
+    "#         x = df_r_diff[c]\n",
+    "#         y = df_future_fx_ret[c]\n",
+    "#         df = pd.DataFrame({'x':pd.to_numeric(x), 'y':pd.to_numeric(y)})\n",
+    "#         df = df[df!=0].dropna()\n",
+    "#         mod = ols('y ~ x', data=df).fit()\n",
+    "#         if mod.rsquared > 0.00:\n",
+    "#             print(n)\n",
+    "#             print(c)\n",
+    "#             plt.scatter(df_r_diff[c], df_future_fx_ret[c])\n",
+    "#             plt.show()\n",
+    "#             print(mod.params)\n",
+    "#             print(mod.rsquared)\n",
     "    \n",
     "    # Now all currencies\n",
     "    x = df_r_diff.unstack()\n",
     "    y = df_future_fx_ret.unstack()\n",
     "    df = pd.DataFrame({'x':pd.to_numeric(x), 'y':pd.to_numeric(y)})\n",
     "    df = df[df!=0].dropna()\n",
-    "    mod = ols('y ~ x', data=df).fit()\n",
+    "    mod = ols('y ~ x', data=df).fit(cov_type='HC3')\n",
     "    \n",
     "    # Print some info\n",
     "    print('\\n')\n",
@@ -509,7 +548,10 @@
     "    print('RSquared: ' + str(round(mod.rsquared,3 )))\n",
     "    \n",
     "    # Store info in df\n",
+    "    fx_forecast.loc[n, 'intercept'] = mod.params['Intercept']\n",
     "    fx_forecast.loc[n, 'slope'] = mod.params['x']\n",
+    "    fx_forecast.loc[n, 'p-value intercept'] = mod.pvalues[0]\n",
+    "    fx_forecast.loc[n, 'p-value slope'] = mod.pvalues[1]\n",
     "    fx_forecast.loc[n, 'RSquared'] = mod.rsquared\n",
     "    \n",
     "    # Scatter plot\n",
@@ -518,7 +560,7 @@
     "    plt.title('Future FX returns vs interest rate differential')\n",
     "    plt.xlabel('Interest rate differential (foreign 3M Libor minus CHF 3M Libor)')\n",
     "    plt.ylabel(str(n) + ' month annualized FX returns')\n",
-    "    plt.savefig('Plots/' + str(n) + 'MonthAheadFXReturnsVsInterestDifferential.jpg')\n",
+    "    plt.savefig('Plots/' + str(n) + 'MonthAheadFXReturnsVsInterestDifferential.jpg', dpi=300)\n",
     "    plt.show()\n",
     "    \n",
     "\n",
@@ -564,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -652,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +885,7 @@
        "[217 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -962,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1162,7 @@
        "Annualized Volatility                          0.138761         0.138916  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1306,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1351,16 +1393,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1750b63d0>"
+       "<matplotlib.legend.Legend at 0x16eebd130>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1396,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1461,7 @@
     "plt.legend(['PPI', 'CPI', 'OECD'])\n",
     "plt.ylabel('USD Relative Currency strength')\n",
     "plt.title('Comparison of different relative currency strength valuation methods')\n",
-    "plt.savefig('Plots/ComparisonRelativeCurrencyStrengthUSD.jpg')"
+    "plt.savefig('Plots/ComparisonRelativeCurrencyStrengthUSD.jpg', dpi=300)"
    ]
   },
   {
