Updated leverage constraints

--- a/Dynamic Currency Hedging.ipynb
+++ b/Dynamic Currency Hedging.ipynb
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 314,
    "metadata": {
     "scrolled": true
    },
@@ -2141,7 +2141,7 @@
        "26    ppi                       24  0.5      0.524281"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2164,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 315,
    "metadata": {
     "scrolled": true
    },
@@ -2263,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2299,7 +2299,7 @@
     "    \n",
     "    average_hedge = df_currency_hedge_weights\n",
     "    average_hedge[average_hedge != 0] = 1\n",
-    "    print(average_hedge.mean())\n",
+    "    # print(average_hedge.mean())\n",
     "\n",
     "    # Insert into other df\n",
     "    backtest_expensive_hedge_weights[['USDCHF', 'EURCHF', 'GBPCHF', 'AUDCHF', 'JPYCHF', 'CADCHF']] = df_currency_hedge_weights\n",
@@ -2307,6 +2307,9 @@
     "    # Returns are weights of previous period * return of asset\n",
     "    backtest_expensive_hedge_returns = backtest_expensive_hedge_weights.shift(1) * backtest_asset_returns\n",
     "    backtest_expensive_hedge_returns = backtest_expensive_hedge_returns.sum(axis=1)\n",
+    "    \n",
+    "    # Save weights\n",
+    "    # backtest_expensive_hedge_weights.to_csv('top_5_ppi_currencies_hedge_weights.csv')\n",
     "\n",
     "    backtest_expensive_hedge_returns = np.log(1+backtest_expensive_hedge_returns)\n",
     "    backtest_expensive_hedge = 100*(np.exp(backtest_expensive_hedge_returns.cumsum()))\n",
@@ -2633,35 +2636,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "USD    0.461883\n",
-      "EUR    0.439462\n",
-      "GBP    0.766816\n",
-      "AUD    0.820628\n",
-      "JPY    0.784753\n",
-      "CAD    0.726457\n",
-      "dtype: float64\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "-0.14443675319337126"
+       "-0.10428009064519733"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sharpe_of_x_strongest_currencies_hedge(4, df_rel_currency_strength_oecd, df_currency_weights)"
+    "sharpe_of_x_strongest_currencies_hedge(5, df_rel_currency_strength_ppi, df_currency_weights)"
    ]
   },
   {
